[package]
name    = "pipeworkmc-codec"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused_parens = "allow"
# TODO: missing_docs = "deny"
[lints.clippy]
missing_safety_doc = "allow" # TODO: Remove


[dependencies.atomic_enum]
version = "0.3"

[dependencies.uuid]
version  = "1.18"
features = [ "v3", "serde" ]
